# OPENBB-CN

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: OpenClaw深度介绍.md  openclaw-presentation.html  openclaw-slides.html
openbb_core/: __init__.py  api.py  core.py
openbb_core/extensions/: __init__.py  ai.py  fundamental.py  stocks.py  technical.py
openbb_core/providers/: __init__.py  akshare_provider.py  base.py  eastmoney_provider.py  easyquotation_provider.py  tushare_provider.py
openbb_core/router/: __init__.py
scripts/: start_server.sh  start_webui.sh
tests/: __init__.py  test_openbb.py
web_ui/: package-lock.json  package.json
web_ui/src/: App.css  App.jsx
web_ui/src/pages/: AIPage.jsx  FundamentalPage.jsx  MarketPage.jsx  StockPage.jsx  TechnicalPage.jsx
