[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbb-cn"
version = "0.1.0"
description = "面向中国市场的开源金融数据平台"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "OPENBB-CN Team"}
]
keywords = ["finance", "stock", "quant", "china", "a-share", "openbb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "plotly>=5.18.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]
providers = [
    "akshare>=1.12.0",
    "easyquotation>=0.5.0",
    "tushare>=1.3.0",
    "eastmoney>=0.1.0",
]
ai = [
    "langchain-minimax>=0.1.0",
    "zhipuai>=2.0.0",
    "dashscope>=1.14.0",
    "openai>=1.0.0",
]
all = [
    "openbb-cn[dev,providers,ai]",
]

[project.urls]
Homepage = "https://github.com/OPENBB-CN/OPENBB-CN"
Documentation = "https://openbb-cn.readthedocs.io"
Repository = "https://github.com/OPENBB-CN/OPENBB-CN"
Issues = "https://github.com/OPENBB-CN/OPENBB-CN/issues"

[project.scripts]
openbb = "openbb_core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openbb*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]
